my first update

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <li>RightArrow : To Punch</li>
               <li>DownArrow : To Jump Down</li>
               <li>UpArrow : To Jump Up</li>
-              <li>SpaceBar : To Walk</li>
+              <li>Tab : To Walk</li>
             </ul>
             <h3>Buttons:</h3>
             <ul>
