my third update

--- a/game.html
+++ b/game.html
@@ -13,9 +13,12 @@
       <button id="walk">Walk(Tab)</button>
       <button id="punch">Punch(Right)</button>
       <form style="display: inline">
-        <input id="mode" type="button" value="Day" />
+        <input id="mode" type="button" value="Night" />
       </form>
-      <button id="sound">Sound</button>
+      <form style="display: inline">
+        <audio id="audio" src="music/doomsgate.mp3"></audio>
+        <input id="sound" type="button" value="Sound" />
+      </form>
       <button id="home">Home</button>
       <button id="refresh">New Game</button>
     </div>
