--- a/game.html
+++ b/game.html
@@ -10,7 +10,7 @@
       <button id="kick">Kick(Left)</button>
       <button id="jumpD">JumpDown(Down)</button>
       <button id="jumpU">JumpUp(Up)</button>
-      <button id="walk">Walk(Tab)</button>
+      <button id="walk">Walk(W)</button>
       <button id="punch">Punch(Right)</button>
       <form style="display: inline">
         <input id="mode" type="button" value="Night" />
