--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <li>RightArrow : To Punch</li>
               <li>DownArrow : To Jump Down</li>
               <li>UpArrow : To Jump Up</li>
-              <li>Tab : To Walk</li>
+              <li>W : To Walk</li>
             </ul>
             <h3>Buttons:</h3>
             <ul>
@@ -33,8 +33,8 @@
             <h3>How To Play? :</h3>
             <ul>
               <li>Pass through all the monsters and reach the end point without getting eaten by the monsters.</li>
-              <li>While passing along you will be awarded points .</li>
-              <li>Jumping earns two points.</li>
+              <li>You have to pass through without getting eaten by the monsters and before the score becomes zero .</li>
+              <li>Jumping deducts two points.</li>
               <li>Kicking and Punching monsters each earns 10 points.</li>
               <li>Total points will be calculated as your Score.<h3>Score</h3>.</li>
             </ul>
