pre final commit

--- a/game.html
+++ b/game.html
@@ -7,11 +7,11 @@
   <body>
     <canvas id="myCanvas"> </canvas>
     <div calss="container">
-      <button id="kick">Kick(Left)</button>
-      <button id="jumpD">JumpDown(Down)</button>
-      <button id="jumpU">JumpUp(Up)</button>
-      <button id="walk">Walk(W)</button>
-      <button id="punch">Punch(Right)</button>
+      <button id="kick"><span>Kick(Left)</span></button>
+      <button id="jumpD"><span>JumpDown(Down)</span></button>
+      <button id="jumpU"><span>JumpUp(Up)</span></button>
+      <button id="walk"><span>Walk(W)</span></button>
+      <button id="punch"><span>Punch(Right)</span></button>
       <form style="display: inline">
         <input id="mode" type="button" value="Night" />
       </form>
@@ -19,8 +19,8 @@
         <audio id="audio" src="music/doomsgate.mp3"></audio>
         <input id="sound" type="button" value="Sound" />
       </form>
-      <button id="home">Home</button>
-      <button id="refresh">New Game</button>
+      <button id="home"><span>Home</span></button>
+      <button id="refresh"><span>New Game</span></button>
     </div>
     <script type="text/javascript" src="canvas1.js"></script>
   </body>
